data/derived/sp14/progs/unify/prog1054.ml.out
Characters 91-119:
  | hd::tl -> concat (listReverse tl) [hd];;
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list list
       but an expression was expected of type 'a list
       The type variable 'a occurs inside 'a list
